--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -29,6 +29,7 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   fetch-depth: "0"
+                  submodules: "recursive"
 
             - name: Setup Meson
               run: |
